# rsi-framework

./: .gitignore  .pre-commit-config.yaml  ATTRIBUTIONS.md  CLAUDE.md  FRAMEWORK.md  PROOF_WRONG_GUIDE.md  README.md  STACK_EVOLUTION.md  TOYOTA_PRINCIPLES.md  bootstrap.sh  conftest.py  pyproject.toml
.claude/: settings.json
.memory/: .preflight_state.json  .session_timestamp
.memory/MEMORY_TEMPLATE/: README.md
.memory/MEMORY_TEMPLATE/rounds/: round-001.md
.memory/rounds/: round-001.md
.memory/technical/: FAIL-index.md  decisions.md  patterns.md
.rsi/: DELEGATION_GUIDE.md  architecture.yaml  rules.yaml
MEMORY_TEMPLATE/: backlog.md
MEMORY_TEMPLATE/agents/: current-task.md
MEMORY_TEMPLATE/calibration/: README.md
MEMORY_TEMPLATE/metrics/: README.md
MEMORY_TEMPLATE/technical/: FAIL-index.md  root-causes.md
adapters/: __init__.py  aider.py  base.py  claude_code.py  copilot.py  cursor.py  deepseek.py  generic.py  kimi.py  langchain_adapter.py  minimax.py  openai_agents.py  tool_wrappers.py
docs/: baseline-metrics.md  diagnostic-conventions.md  kimi-capability-audit.md  security-audit.md  spec-amendments.md
docs/decisions/: phase-E0a.md  phase-E2-E3.md  phase-E7.md
docs/retrospectives/: job-platform-phase-1.md  phase-1-decomposition.md
docs/sample_events/: pre-bash.json  pre-read.json
docs/templates/: calibration-traps.md  escalation-criteria.md  phase-retrospective-base.md  review-memo-base.md  task-spec-base.md  testing-conventions.md
engine/: __init__.py  protocol.py
go/: go.mod
go/cmd/rsi-hook/: main.go
go/internal/classify/: classify.go
go/internal/pathsafe/: pathsafe.go
go/internal/rules/: rules.go
go/internal/state/: state.go
scripts/: __init__.py  api_check.py  audit.py  auto_delegate.py  backlog.py  calibration.py  ceremony.py  checkpoint.sh  ci_check.sh  classify_file.py  colors.py  dashboard.py  delegate.py  framework_sync.py  hook_client.py  hook_client.sh  hookd.py  hooks.py  init.sh  install_hooks.sh  metrics.py  pending_diff.py  post_implementation.py  preflight_check.py  probe_minimax_image.py  review.sh  review_queue.py  root_cause.py  rsi.py  rules_engine.py  self_feedback.py  self_optimization.py  self_verify.py  session_brief.py  setup.ps1  setup.py  setup.sh  shape.py  trust.py  universal_hook.py
scripts/adapters/: README.md  __init__.py  opencode_adapter.sh  shell_integrator.py
scripts/git-hooks/: commit-msg  pre-commit
tests/: test_adapters.py  test_api_check.py  test_calibration.py  test_ceremony.py  test_classify_file.py  test_delegate.py  test_delegate_image.py  test_delegate_session3.py  test_delegate_sidecar.py  test_delegate_worker_config.py  test_delegation_gate.py  test_framework.py  test_hooks.py  test_json_parser.py  test_metrics.py  test_path_safety.py  test_phases_0_1_2_3.py  test_phases_4_5_6.py  test_review_queue.py  test_self_feedback_programmatic.py  test_self_verify.py  test_universal_hook.py
