[project]
name = "rsi-framework"
version = "2.2.0"
description = "Recursive Self-Improvement framework built on Toyota Production System principles"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
files = ["engine", "scripts/rsi.py"]
# Scripts outside the strict scope are still imported by rsi.py (for metrics,
# session_brief, etc.). Treat them as untyped stubs so we don't fail on their
# missing annotations while Phase E6 has yet to harden them.
follow_imports = "silent"

