[project]
name = "rsi-framework"
version = "2.2.0"
description = "Recursive Self-Improvement framework built on Toyota Production System principles"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
files = ["engine", "scripts/rsi.py"]
# Scripts outside the strict scope are still imported by rsi.py (for metrics,
# session_brief, etc.). Treat them as untyped stubs so we don't fail on their
# missing annotations while Phase E6 has yet to harden them.
follow_imports = "silent"

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [".memory", ".rsi", "bin", "go", "docs", "__pycache__"]

[tool.ruff.lint]
# E = pycodestyle errors, F = pyflakes, I = import order, UP = pyupgrade,
# B = flake8-bugbear, SIM = flake8-simplify, RUF = ruff-specific.
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
# E501 (line too long) is informational — fmt handles the rest.
ignore = ["E501", "SIM108", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
