[project]
name = "rsi-framework"
version = "2.2.0"
description = "Recursive Self-Improvement framework built on Toyota Production System principles"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
files = ["engine", "scripts/rsi.py"]
# Scripts outside the strict scope are still imported by rsi.py (for metrics,
# session_brief, etc.). Treat them as untyped stubs so we don't fail on their
# missing annotations while Phase E6 has yet to harden them.
follow_imports = "silent"

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [".memory", ".rsi", "bin", "go", "docs", "__pycache__"]

[tool.ruff.lint]
# E = pycodestyle errors, F = pyflakes, I = import order, UP = pyupgrade,
# B = flake8-bugbear, SIM = flake8-simplify, RUF = ruff-specific.
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
# E501 (line too long) is informational — fmt handles the rest.
# The SIM/RUF/UP rules below flag stylistic issues the E6 hardening pass
# intentionally deferred; they do not indicate bugs and can be re-enabled
# in a future cleanup sweep.
ignore = [
    "E501",    # line too long
    "SIM108",  # ternary over if/else
    "B008",    # function calls in default arguments
    "B011",    # `assert False` in tests (legacy style, not a bug)
    "E402",    # module-import-not-at-top — often intentional (lazy imports)
    "E712",    # `== True` / `== False` (readability preference, not bug)
    "E741",    # ambiguous variable names (too aggressive on l/I/O)
    "RUF005",  # collection-literal-concatenation (style)
    "RUF012",  # mutable-class-default (flagged in enum-like tables — safe)
    "RUF059",  # unused-unpacked-variable (common in tuple unpacks)
    "SIM102",  # collapsible-if (sometimes the nested form is clearer)
    "SIM105",  # suppressible-exception (contextlib.suppress adds import noise)
    "SIM110",  # reimplemented-builtin
    "UP042",   # replace str-enum with enum.StrEnum (3.11 feature, style)
    "B007",    # unused-loop-control-variable (often intentional in scans)
    "B005",    # strip-with-multi-characters (rare, intentional)
    "F841",   # unused-variable — many tests/scripts keep intermediate results
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
